Chat UI #146: group name change message alignment fix

--- a/src/modules/chat/style.css
+++ b/src/modules/chat/style.css
@@ -275,8 +275,8 @@ button.dark-grey .icon,
     scroll-behavior: smooth;
     transition: all 0.5s ease;
 }
-.chat-container .messages .message-group-name {
-    text-align: left;
+.chat-container .messages .action-message {
+    text-align: center;
     color: grey;
 }
 .chat-container .messages .message-wrap {
